Bug 226194 - weather widgets truncate zone code from BBC service
Summary: weather widgets truncate zone code from BBC service
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-weather (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-10 20:52 UTC by Carlos Colorado
Modified: 2011-11-22 20:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Colorado 2010-02-10 20:52:25 UTC
Version:            (using KDE 4.4.0)
OS:                Linux
Installed from:    Archlinux Packages

LCD weather widget truncates the zone code when fetching data

How to reproduce : Setting the widget to get the weather from 'Monterrey, Mexico' (which is area code 13046)

The widget displays the weather from DUNHUAN CHINA wich is area code 1304

Monterrey, Mexico 
http://news.bbc.co.uk/weather/forecast/13046

Dunhaun China 
http://news.bbc.co.uk/weather/forecast/1304
Comment 1 Lukas Krejci 2010-07-14 23:21:41 UTC
The second patch posted to bug 205235 (https://bugs.kde.org/attachment.cgi?id=47920) should fix this issue.
Comment 2 Shawn Starr 2011-06-30 05:00:05 UTC
Will take a look at patch and merge, sorry for loooong delay.
Comment 3 Aaron J. Seigo 2011-11-22 20:03:51 UTC
Git commit 2ab4bb1c442b26a35065e36ce9ef8273cbd38229 by Aaron Seigo.
Committed on 22/11/2011 at 21:03.
Pushed by aseigo into branch 'master'.

fix long weather codes

patch by Lukas Krejci
BUG:226194

M  +26   -24   plasma/generic/dataengines/weather/ions/bbcukmet/ion_bbcukmet.cpp

http://commits.kde.org/kde-workspace/2ab4bb1c442b26a35065e36ce9ef8273cbd38229