fix long weather codes

patch by Lukas Krejci
BUG:226194