plasma/generic/dataengines/weather/ions/bbcukmet/ion_bbcukmet.cpp
@@ -275,10 +275,13 @@ void UKMETIon::findPlace(const QString& place, const QString& source)
 void UKMETIon::getFiveDayForecast(const QString& source)
 {
 
-    QString xmlMap = m_place[source].forecastHTMLUrl;
-    int splitIDPos = xmlMap.lastIndexOf('/');
-    QString stationID = xmlMap.midRef(splitIDPos + 1).toString();
-    m_place[source].XMLforecastURL = "http://newsrss.bbc.co.uk/weather/forecast/" + stationID + "/Next3DaysRSS.xml";
+    KUrl xmlMap(m_place[source].forecastHTMLUrl);    
+    
+    QString xmlPath = xmlMap.path();
+    
+    int splitIDPos = xmlPath.lastIndexOf('/');
+    QString stationID = xmlPath.midRef(splitIDPos + 1).toString();
+    m_place[source].XMLforecastURL = "http://newsrss.bbc.co.uk/weather/forecast/" + stationID + "/Next3DaysRSS.xml" + xmlMap.query();
     KUrl url(m_place[source].XMLforecastURL);
 
     m_job = KIO::get(url.url(), KIO::Reload, KIO::HideProgressInfo);
@@ -304,7 +307,7 @@ void UKMETIon::readSearchHTMLData(const QString& source, const QByteArray& html)
     int counter = 2;
 
     // "<p><a id="result_40" href ="/weather/forecast/4160?count=200">Vitoria, Brazil</a></p>"
-    QRegExp grabURL("/[a-z]+/[a-z]+/[0-9]{1,4}");
+    QRegExp grabURL("/[a-z]+/[a-z]+/([0-9]+)(\\?[^\"]+)?");
     QRegExp grabPlace(">([^<]*[a-z()])"); // FIXME: It would be better to strip away the extra '>'
 
     while (!stream.atEnd()) {
@@ -319,25 +322,24 @@ void UKMETIon::readSearchHTMLData(const QString& source, const QByteArray& html)
 
        if (flag) {
 
-           // Strip out area searching
-           if (!line.contains("area=") > 0) {
-                   if (grabURL.indexIn(line.trimmed()) > 0) {
-                       tokens = grabURL.cap(0).split('/', QString::SkipEmptyParts);
-                       grabPlace.indexIn(line.trimmed());
-                       url = "http://newsrss.bbc.co.uk/weather/forecast/" + tokens[2] + "/ObservationsRSS.xml";
-                       tmp = QString("bbcukmet|").append(grabPlace.cap(1));
+            if (grabURL.indexIn(line.trimmed()) > 0) {
+                url = "http://newsrss.bbc.co.uk/weather/forecast/" + grabURL.cap(1) + "/ObservationsRSS.xml";
+                if (grabURL.captureCount() > 1) {
+                    url += grabURL.cap(2);
+                }
+                grabPlace.indexIn(line.trimmed());
+                tmp = QString("bbcukmet|").append(grabPlace.cap(1));
 
-                       // Duplicate places can exist
-                       if (m_locations.contains(tmp)) {
-                           tmp = QString("bbcukmet|").append(QString("%1 (#%2)").arg(grabPlace.cap(1)).arg(counter));
-                           counter++;
-                       }
+                // Duplicate places can exist
+                if (m_locations.contains(tmp)) {
+                    tmp = QString("bbcukmet|").append(QString("%1 (#%2)").arg(grabPlace.cap(1)).arg(counter));
+                    counter++;
+                }
 
-                       m_place[tmp].XMLurl = url;
-                       m_place[tmp].place = grabPlace.cap(1);
-                       m_locations.append(tmp);
-                   }
-           }
+                m_place[tmp].XMLurl = url;
+                m_place[tmp].place = grabPlace.cap(1);
+                m_locations.append(tmp);
+            }
        }
 
        if (line.contains("<div class=\"line\">") > 0) {
